--- a/index.html
+++ b/index.html
@@ -946,12 +946,23 @@
       }
     }
     
-    function appendChatLog(nickname, message, date) {
-      const div = document.createElement("div");
-      div.style.padding = "4px 0";
-      div.innerHTML = `<strong>${nickname}</strong> [${date.toLocaleTimeString()}]: ${message}`;
-      chatLog.appendChild(div);
-    }
+function appendChatLog(nickname, message, date) {
+  const div = document.createElement("div");
+  div.style.padding = "4px 0";
+
+  const strong = document.createElement("strong");
+  strong.textContent = nickname;
+
+  const timeText = document.createTextNode(` [${date.toLocaleTimeString()}]: `);
+  const messageText = document.createTextNode(message);
+
+  div.appendChild(strong);
+  div.appendChild(timeText);
+  div.appendChild(messageText);
+
+  chatLog.appendChild(div);
+}
+
     
     // 1초마다 신규 메시지 불러오기
     setInterval(() => {
